--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header">
-    <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
-    <div class="jumbotron"> <h1>HELLO SHOP</h1>
+    <div class="jumbotron">
         <p class="lead">회원 기능</p> <p>
-            <a class="btn btn-lg btn-secondary" href="/members/new">회원 가입</a>
-            <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a> </p>
+
+            <a class="btn btn-lg btn-secondary" href="/members">회원관리</a> </p>
         <p class="lead">상품 기능</p> <p>
             <a class="btn btn-lg btn-dark" href="/items/new">상품 등록</a>
             <a class="btn btn-lg btn-dark" href="/items">상품 목록</a> </p>
